UHF-X: Fix extra padding that should only cater koro footer

--- a/src/scss/06_components/pages/_cookie-compliance.scss
+++ b/src/scss/06_components/pages/_cookie-compliance.scss
@@ -136,10 +136,10 @@
       }
     }
   }
+}
 
-  .layout-main-wrapper &:last-child .message {
-    margin-bottom: 80px;
-  }
+.layout-main-wrapper > .block--react-and-share:last-child .message {
+  margin-bottom: 80px;
 }
 
 // Remote videos have black background and white text so we need different styles for the
